--- a/src/blocks/iconlist/style.scss
+++ b/src/blocks/iconlist/style.scss
@@ -11,11 +11,17 @@
 .wp-block-kadence-iconlist ul.kt-svg-icon-list li.kt-svg-icon-list-item-wrap:not(.this-prevents-issues):not(.this-stops-third-party-issues):not(.tijsloc) {
     display: flex;
 }
+
 .wp-block-kadence-iconlist ul.kt-svg-icon-list {
     padding: 0;
     list-style: none;
 	margin: 0 0 10px 0;
 	text-align: left;
+	display: grid;
+	grid-template-columns: repeat(1, minmax(0, 1fr));
+	grid-template-rows: auto;
+	row-gap: 5px;
+
 	svg {
 		width: 1em;
 		height: 1em;
@@ -24,7 +30,7 @@
 		display: flex;
 		align-items: center;
 		padding: 0;
-		margin: 0 0 5px 0;
+		margin: 0;
 		.kt-svg-icon-list-single {
 			margin-right: 10px;
 			padding: 4px 0;
@@ -65,6 +71,10 @@
 		padding-left: 10rem;
 	}
 }
+//increasing specificty of grid for ul's living in mega menus
+body .wp-block-kadence-iconlist ul.kt-svg-icon-list.kt-svg-icon-list.kt-svg-icon-list {
+	display: grid;
+}
 .rtl .wp-block-kadence-iconlist ul.kt-svg-icon-list {
 	.kt-svg-icon-list-item-wrap {
 		.kt-svg-icon-list-single {
@@ -87,14 +97,10 @@
 }
 .kt-svg-icon-list-columns-2 ul.kt-svg-icon-list {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-    grid-template-rows: auto;
-	display: grid !important;
 	gap: 5px 1em;
 }
 .kt-svg-icon-list-columns-3 ul.kt-svg-icon-list {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    grid-template-rows: auto;
-	display: grid !important;
 	gap: 5px 1em;
 }
 .wp-block-kadence-iconlist.kt-list-icon-aligntop ul.kt-svg-icon-list .kt-svg-icon-list-item-wrap a.kt-svg-icon-link {
@@ -105,31 +111,23 @@
 }
 @media (max-width: 1024px) {
 	.kt-tablet-svg-icon-list-columns-1 ul.kt-svg-icon-list {
-		display: block !important;
+		grid-template-columns: repeat(1, minmax(0, 1fr));
 	}
 	.kt-tablet-svg-icon-list-columns-2 ul.kt-svg-icon-list {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
-		grid-template-rows: auto;
-		display: grid;
 	}
 	.kt-tablet-svg-icon-list-columns-3 ul.kt-svg-icon-list {
 		grid-template-columns: repeat(3, minmax(0, 1fr));
-		grid-template-rows: auto;
-		display: grid;
 	}
 }
 @media (max-width: 767px) {
 	.kt-mobile-svg-icon-list-columns-1 ul.kt-svg-icon-list {
-		display: block !important;
+		grid-template-columns: repeat(1, minmax(0, 1fr));
 	}
 	.kt-mobile-svg-icon-list-columns-2 ul.kt-svg-icon-list {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
-		grid-template-rows: auto;
-		display: grid;
 	}
 	.kt-mobile-svg-icon-list-columns-3 ul.kt-svg-icon-list {
 		grid-template-columns: repeat(3, minmax(0, 1fr));
-		grid-template-rows: auto;
-		display: grid;
 	}
 }
