--- a/src/blocks/accordion/editor.scss
+++ b/src/blocks/accordion/editor.scss
@@ -104,7 +104,8 @@ body.rtl .kt-size-tabs .components-tab-panel__tabs, body.rtl .components-button-
 	margin-top: 0;
 }
 
-.kt-blocks-accordion-header {
+.kt-blocks-accordion-header,
+.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-blocks-accordion-header {
     align-content: space-between;
     align-items: center;
     background-color: var(--global-palette8, #f2f2f2 );
@@ -140,7 +141,8 @@ body.rtl .kt-size-tabs .components-tab-panel__tabs, body.rtl .components-button-
 		padding-left: .25em;
 	}
 }
-.kt-accordion-panel-active {
+.kt-accordion-panel-active, 
+.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accordion-panel-active {
 	.kt-blocks-accordion-header {
 		background-color: var(--global-palette5, #444444 );
 		color: #ffffff;
@@ -153,7 +155,8 @@ body.rtl .kt-size-tabs .components-tab-panel__tabs, body.rtl .components-button-
 		display: block;
 	}
 }
-.kt-accordion-panel {
+.kt-accordion-panel,
+.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accordion-panel {
 	display: none;
 }
 .kt-accordion-panel-inner {
@@ -197,7 +200,8 @@ button.components-button.kt-accordion-add.is-primary {
 .components-button-group button.components-button.kt-init-open-pane:focus:enabled {
 	box-shadow:none;
 }
-.kt-blocks-accordion-icon-trigger {
+.kt-blocks-accordion-icon-trigger,
+.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-blocks-accordion-icon-trigger {
     display: block;
     height: 24px;
     margin-left: auto;
@@ -207,7 +211,8 @@ button.components-button.kt-accordion-add.is-primary {
 	min-width: 24px;
     box-sizing: content-box;
 }
-.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
+.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before,
+.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
     background-color: var(--global-palette5, #444444 );
 }
 .rtl .kt-blocks-accordion-icon-trigger {
