--- a/src/blocks/accordion/editor.scss
+++ b/src/blocks/accordion/editor.scss
@@ -104,8 +104,7 @@ body.rtl .kt-size-tabs .components-tab-panel__tabs, body.rtl .components-button-
 	margin-top: 0;
 }
 
-.kt-blocks-accordion-header,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-blocks-accordion-header {
+.kt-blocks-accordion-header {
     align-content: space-between;
     align-items: center;
     background-color: var(--global-palette8, #f2f2f2 );
@@ -115,13 +114,13 @@ body.rtl .kt-size-tabs .components-tab-panel__tabs, body.rtl .components-button-
     display: flex;
     padding: 8px 12px;
     text-align: left;
-		font-size: 18px;
-		line-height: 24px;
-		text-transform: none;
+	font-size: 18px;
+	line-height: 24px;
+	text-transform: none;
     transition: all ease-in-out .2s;
 	width: 100%;
 	box-sizing: border-box;
-	&:hover {
+	/*&:hover {
 		background-color: var(--global-palette7, #eeeeee );
 		color: var(--global-palette5, #444444 );
 		box-shadow: none;
@@ -129,7 +128,7 @@ body.rtl .kt-size-tabs .components-tab-panel__tabs, body.rtl .components-button-
 		.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
 			background-color: currentColor;
 		}
-	}
+	}*/
 	.kt-btn-svg-icon svg {
 		width: 1em;
 		height: 1em;
@@ -141,8 +140,7 @@ body.rtl .kt-size-tabs .components-tab-panel__tabs, body.rtl .components-button-
 		padding-left: .25em;
 	}
 }
-.kt-accordion-panel-active, 
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accordion-panel-active {
+.kt-accordion-panel-active {
 	.kt-blocks-accordion-header {
 		background-color: var(--global-palette5, #444444 );
 		color: #ffffff;
@@ -155,8 +153,7 @@ body.rtl .kt-size-tabs .components-tab-panel__tabs, body.rtl .components-button-
 		display: block;
 	}
 }
-.kt-accordion-panel,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accordion-panel {
+.kt-accordion-panel {
 	display: none;
 }
 .kt-accordion-panel-inner {
@@ -200,8 +197,7 @@ button.components-button.kt-accordion-add.is-primary {
 .components-button-group button.components-button.kt-init-open-pane:focus:enabled {
 	box-shadow:none;
 }
-.kt-blocks-accordion-icon-trigger,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-blocks-accordion-icon-trigger {
+.kt-blocks-accordion-icon-trigger {
     display: block;
     height: 24px;
     margin-left: auto;
@@ -211,8 +207,7 @@ button.components-button.kt-accordion-add.is-primary {
 	min-width: 24px;
     box-sizing: content-box;
 }
-.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
+.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
     background-color: var(--global-palette5, #444444 );
 }
 .rtl .kt-blocks-accordion-icon-trigger {
@@ -257,9 +252,7 @@ button.components-button.kt-accordion-add.is-primary {
 	margin-left: auto;
 	margin-right: 0;
 }
-.kt-accodion-icon-style-basic, .kt-accodion-icon-style-basiccircle,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accodion-icon-style-basic,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accodion-icon-style-basiccircle {
+.kt-accodion-icon-style-basic, .kt-accodion-icon-style-basiccircle {
 	.kt-blocks-accordion-header.kt-accordion-panel-active {
 		.kt-blocks-accordion-icon-trigger:before {
 			transform: rotate(0deg);
@@ -286,8 +279,7 @@ button.components-button.kt-accordion-add.is-primary {
 		transform-origin: 50%;
 	}
 }
-.kt-accodion-icon-style-basic .kt-accordion-panel-active .kt-blocks-accordion-header,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accodion-icon-style-basic .kt-accordion-panel-active .kt-blocks-accordion-header {
+.kt-accodion-icon-style-basic .kt-accordion-panel-active .kt-blocks-accordion-header {
 	.kt-blocks-accordion-icon-trigger:before {
 		transform: rotate(0deg);
 	}
@@ -296,8 +288,7 @@ button.components-button.kt-accordion-add.is-primary {
 	}
 }
 // Basic Circle
-.kt-accodion-icon-style-basiccircle,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accodion-icon-style-basiccircle {
+.kt-accodion-icon-style-basiccircle {
 	.kt-blocks-accordion-icon-trigger {
 		border-radius: 50%;
 	}
@@ -307,8 +298,7 @@ button.components-button.kt-accordion-add.is-primary {
 		top: 10px;
 	}
 }
-.kt-accodion-icon-style-basiccircle .kt-accordion-panel-active .kt-blocks-accordion-header,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accodion-icon-style-basiccircle .kt-accordion-panel-active .kt-blocks-accordion-header {
+.kt-accodion-icon-style-basiccircle .kt-accordion-panel-active .kt-blocks-accordion-header {
 	.kt-blocks-accordion-icon-trigger:before {
 		transform: rotate(0deg);
 	}
@@ -317,8 +307,7 @@ button.components-button.kt-accordion-add.is-primary {
 	}
 }
 // x close
-.kt-accodion-icon-style-xclose, .kt-accodion-icon-style-xclosecircle,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accodion-icon-style-xclose, .wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accodion-icon-style-xclosecircle {
+.kt-accodion-icon-style-xclose, .kt-accodion-icon-style-xclosecircle {
 	.kt-blocks-accordion-header.kt-accordion-panel-active {
 		.kt-blocks-accordion-icon-trigger:before {
 			transform: rotate(45deg);
@@ -345,8 +334,7 @@ button.components-button.kt-accordion-add.is-primary {
 		transform-origin: 50%;
 	}
 }
-.kt-accodion-icon-style-xclose .kt-accordion-panel-active .kt-blocks-accordion-header,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accodion-icon-style-xclose .kt-accordion-panel-active .kt-blocks-accordion-header {
+.kt-accodion-icon-style-xclose .kt-accordion-panel-active .kt-blocks-accordion-header {
 	.kt-blocks-accordion-icon-trigger:before {
 		transform: rotate(45deg);
 	}
@@ -355,8 +343,7 @@ button.components-button.kt-accordion-add.is-primary {
 	}
 }
 // x Circle
-.kt-accodion-icon-style-xclosecircle,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accodion-icon-style-xclosecircle {
+.kt-accodion-icon-style-xclosecircle {
 	.kt-blocks-accordion-icon-trigger {
 		border-radius: 50%;
 	}
@@ -366,8 +353,7 @@ button.components-button.kt-accordion-add.is-primary {
 		top: 10px;
 	}
 }
-.kt-accodion-icon-style-xclosecircle .kt-accordion-panel-active .kt-blocks-accordion-header,
-.wp-block-kadence-accordion .wp-block-kadence-accordion .kt-accodion-icon-style-xclosecircle .kt-accordion-panel-active .kt-blocks-accordion-header {
+.kt-accodion-icon-style-xclosecircle .kt-accordion-panel-active .kt-blocks-accordion-header {
 	.kt-blocks-accordion-icon-trigger:before {
 		transform: rotate(45deg);
 	}
@@ -429,4 +415,229 @@ button.components-button.kt-accordion-add.is-primary {
 }
 .kt-accordion-panel > .kt-accordion-panel-inner > .block-editor-inner-blocks > .block-editor-block-list__layout > .block-list-appender > .block-editor-default-block-appender {
     display: block;
+}
+
+.wp-block-kadence-accordion .wp-block-kadence-accordion {
+	.kt-blocks-accordion-header {
+		align-content: space-between;
+		align-items: center;
+		background-color: var(--global-palette8, #f2f2f2 );
+		border: 0 solid transparent;
+		border-radius: 0px;
+		color: var(--global-palette5, #444444 );
+		display: flex;
+		padding: 8px 12px;
+		text-align: left;
+		font-size: 18px;
+		line-height: 24px;
+		text-transform: none;
+		transition: all ease-in-out .2s;
+		width: 100%;
+		box-sizing: border-box;
+		// &:hover {
+		// 	background-color: var(--global-palette7, #eeeeee );
+		// 	color: var(--global-palette5, #444444 );
+		// 	box-shadow: none;
+		// 	text-shadow: none;
+		// 	.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
+		// 		background-color: currentColor;
+		// 	}
+		// }
+		.kt-btn-svg-icon svg {
+			width: 1em;
+			height: 1em;
+		}
+		.kt-btn-side-left {
+			padding-right: .25em;
+		}
+		.kt-btn-side-right {
+			padding-left: .25em;
+		}
+	}
+	.kt-accordion-panel-active {
+		.kt-blocks-accordion-header {
+			background-color: var(--global-palette5, #444444 );
+			color: #ffffff;
+			.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
+				background-color: currentColor;
+			}
+		}
+	
+		.kt-accordion-panel {
+			display: block;
+		}
+	}
+	.kt-accordion-panel {
+		display: none;
+	}
+	.kt-blocks-accordion-icon-trigger {
+		display: block;
+		height: 24px;
+		margin-left: auto;
+		position: relative;
+		transition: all ease-in-out 0.2s;
+		width: 24px;
+		min-width: 24px;
+		box-sizing: content-box;
+	}
+	.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
+		background-color: var(--global-palette5, #444444 );
+	}
+	.kt-accodion-icon-style-basic, .kt-accodion-icon-style-basiccircle {
+		.kt-blocks-accordion-header.kt-accordion-panel-active {
+			.kt-blocks-accordion-icon-trigger:before {
+				transform: rotate(0deg);
+			}
+			.kt-blocks-accordion-icon-trigger:after {
+				transform: rotate(0deg);
+			}
+		}
+		.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
+			content: "";
+			height: 4px;
+			position: absolute;
+			transition: all ease-in-out 0.1333333333s;
+			width: 20px;
+			left: 2px;
+			top: 10px;
+		}
+		.kt-blocks-accordion-icon-trigger:before {
+			transform: rotate(90deg);
+			transform-origin: 50%;
+		}
+		.kt-blocks-accordion-icon-trigger:after {
+			transform: rotate(0deg);
+			transform-origin: 50%;
+		}
+	}
+	.kt-accodion-icon-style-basic .kt-accordion-panel-active .kt-blocks-accordion-header {
+		.kt-blocks-accordion-icon-trigger:before {
+			transform: rotate(0deg);
+		}
+		.kt-blocks-accordion-icon-trigger:after {
+			transform: rotate(0deg);
+		}
+	}
+	.kt-accodion-icon-style-basiccircle {
+		.kt-blocks-accordion-icon-trigger {
+			border-radius: 50%;
+		}
+		.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
+			width: 16px;
+			left: 4px;
+			top: 10px;
+		}
+	}
+	.kt-accodion-icon-style-basiccircle .kt-accordion-panel-active .kt-blocks-accordion-header {
+		.kt-blocks-accordion-icon-trigger:before {
+			transform: rotate(0deg);
+		}
+		.kt-blocks-accordion-icon-trigger:after {
+			transform: rotate(0deg);
+		}
+	}
+	.kt-accodion-icon-style-xclose, .kt-accodion-icon-style-xclosecircle {
+		.kt-blocks-accordion-header.kt-accordion-panel-active {
+			.kt-blocks-accordion-icon-trigger:before {
+				transform: rotate(45deg);
+			}
+			.kt-blocks-accordion-icon-trigger:after {
+				transform: rotate(-45deg);
+			}
+		}
+		.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
+			content: "";
+			height: 4px;
+			position: absolute;
+			transition: all ease-in-out 0.1333333333s;
+			width: 20px;
+			left: 2px;
+			top: 10px;
+		}
+		.kt-blocks-accordion-icon-trigger:before {
+			transform: rotate(90deg);
+			transform-origin: 50%;
+		}
+		.kt-blocks-accordion-icon-trigger:after {
+			transform: rotate(0deg);
+			transform-origin: 50%;
+		}
+	}
+	.kt-accodion-icon-style-xclose .kt-accordion-panel-active .kt-blocks-accordion-header {
+		.kt-blocks-accordion-icon-trigger:before {
+			transform: rotate(45deg);
+		}
+		.kt-blocks-accordion-icon-trigger:after {
+			transform: rotate(-45deg);
+		}
+	}
+	.kt-accodion-icon-style-xclosecircle {
+		.kt-blocks-accordion-icon-trigger {
+			border-radius: 50%;
+		}
+		.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
+			width: 16px;
+			left: 4px;
+			top: 10px;
+		}
+	}
+	.kt-accodion-icon-style-xclosecircle .kt-accordion-panel-active .kt-blocks-accordion-header {
+		.kt-blocks-accordion-icon-trigger:before {
+			transform: rotate(45deg);
+		}
+		.kt-blocks-accordion-icon-trigger:after {
+			transform: rotate(-45deg);
+		}
+	}
+	// Arrows
+	.kt-accodion-icon-style-arrow, .kt-accodion-icon-style-arrowcircle {
+		.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
+			content: "";
+			height: 2px;
+			position: absolute;
+			top: 11px;
+			transition: all ease-in-out 0.1333333333s;
+			width: 12px;
+		}
+		.kt-blocks-accordion-icon-trigger:before {
+			left: 2px;
+			transform: rotate(45deg);
+			transform-origin: 50%;
+		}
+		.kt-blocks-accordion-icon-trigger:after {
+			transform: rotate(-45deg);
+			right: 2px;
+			transform-origin: 50%;
+		}
+	}
+	.kt-accodion-icon-style-arrow .kt-accordion-panel-active .kt-blocks-accordion-header {
+		.kt-blocks-accordion-icon-trigger:before {
+			transform: rotate(-45deg);
+		}
+		.kt-blocks-accordion-icon-trigger:after {
+			transform: rotate(45deg);
+		}
+	}
+	.kt-accodion-icon-style-arrowcircle {
+		.kt-blocks-accordion-icon-trigger {
+			border-radius: 50%;
+		}
+		.kt-blocks-accordion-icon-trigger:after, .kt-blocks-accordion-icon-trigger:before {
+			width: 10px;
+		}
+		.kt-blocks-accordion-icon-trigger:before {
+			left: 4px;
+		}
+		.kt-blocks-accordion-icon-trigger:after {
+			right: 4px;
+		}
+	}
+	.kt-accodion-icon-style-arrowcircle .kt-accordion-panel-active .kt-blocks-accordion-header {
+		.kt-blocks-accordion-icon-trigger:before {
+			transform: rotate(-45deg);
+		}
+		.kt-blocks-accordion-icon-trigger:after {
+			transform: rotate(45deg);
+		}
+	}
 }
